syntax = "proto3";

package main;

import "google/protobuf/empty.proto";

service HowdyService {
    rpc Howdy(google.protobuf.Empty) returns (HowdyResponse) {}
}

message HowdyResponse {
    string message = 1;
}
